; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_gss_krb5_mech.c_gss_krb5_der_length_size.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_gss_krb5_mech.c_gss_krb5_der_length_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @gss_krb5_der_length_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gss_krb5_der_length_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 128
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %23

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp slt i32 %7, 256
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  br label %21

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  %12 = icmp slt i32 %11, 65536
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  br label %19

14:                                               ; preds = %10
  %15 = load i32, i32* %2, align 4
  %16 = icmp slt i32 %15, 16777216
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 4, i32 5
  br label %19

19:                                               ; preds = %14, %13
  %20 = phi i32 [ 3, %13 ], [ %18, %14 ]
  br label %21

21:                                               ; preds = %19, %9
  %22 = phi i32 [ 2, %9 ], [ %20, %19 ]
  br label %23

23:                                               ; preds = %21, %5
  %24 = phi i32 [ 1, %5 ], [ %22, %21 ]
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
